syntax = "proto3";

package leaderboard.v1;

option go_package = "leaderboard_system/api/gen/leaderboard/v1;leaderboardv1";

import "google/api/annotations.proto";

service ScoreHistoryService {
  rpc GetScoreHistory(GetScoreHistoryRequest) returns (GetScoreHistoryResponse) {
    option (google.api.http) = {
      get: "/api/score-history"
    };
  }
}

message GetScoreHistoryRequest {
  string game = 1;
  int64 user_id = 2;
}

message ScoreEntry {
  int64 user_id = 1;
  string game = 2;
  double score = 3;
  string datetime = 4;
}

message GetScoreHistoryResponse {
  repeated ScoreEntry scores = 1;
}
